--- a/style.css
+++ b/style.css
@@ -18,11 +18,16 @@ nav ul {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content:end;
     background-color: #DFF3F9;
     align-items: center;
     font-size: 20px;
     border-radius: 20px;
+}
+
+/* first child */
+li:first-child{
+    margin-right: auto;
 }
 
 nav>ul>li {
